site/css/style.css
/* small */
p.small {
	font-size: 0.8em;
	margin-block-start: 0.3em;
	margin-block-end: 0.3em;
}

/* Botões do formulário. */
.wp-block-button__link {
	border-radius: 3px;
	white-space: nowrap;
	border-style: none;
	background-color: #000000;
	cursor: pointer;
}

/* Home - Hide title and featured image */
.home main > div:first-child,
.home .wp-block-post-title {
	display: none;
}

/* Organizadores */
.wordcamp-organizers li:not(:last-child) {
	border-bottom: 1px solid #cccccc;
	padding-bottom: 2em;
}
.wordcamp-image__avatar-container img {
    border-radius: 50%;
}
@media only screen and (min-width: 600px) {
	.wordcamp-image__avatar-container {
    	float: left;
    	margin-right: 1em;
	}
	.wordcamp-image__avatar-container img {
		width: 100px;
		height: 100px;
	}
}
.wordcamp-organizers__title {
	font-weight: 600;
}
.wordcamp-organizers__content h3 {
	font-weight: 400;
	font-size: 1.5em;
}

